--- a/work/fenghuang_jr/crm/crm_beta/crm.conf
+++ b/work/fenghuang_jr/crm/crm_beta/crm.conf
@@ -7,6 +7,34 @@ content = all
 [before_all_cycle_time]
 content =
 
+[sqoop_params_tb_user]
+host = jdbc:mysql://10.10.201.74:3306/Biz
+username = pro_hadoop
+password = 3UGCqZp4Li6t
+table = TB_USER
+table_name = tb_user
+target_dir = /tmp/hive/tmp/tb_user
+hive_table = crm_v2.tb_user
+
+[sqoop_params_tb_loanrequest_privilege]
+host = jdbc:mysql://10.10.201.74:3306/Biz
+username = pro_hadoop
+password = 3UGCqZp4Li6t
+table = TB_LOANREQUEST_PRIVILEGE
+table_name = tb_loanrequest_privilege
+target_dir = /tmp/hive/tmp/tb_loanrequest_privilege
+hive_table = crm_v2.tb_loanrequest_privilege
+
+[sqoop_params_tb_loan]
+host = jdbc:mysql://10.10.201.74:3306/Biz
+username = pro_hadoop
+password = 3UGCqZp4Li6t
+table = TB_LOAN
+table_name = tb_loan
+target_dir = /tmp/hive/tmp/tb_loan
+hive_table = crm_v2.tb_loan
+
+
 [sqoop_params_tb_counpon_record]
 host = jdbc:mysql://10.10.201.112:3306/activity
 username = hadoop
@@ -85,7 +113,7 @@ target_dir = /tmp/hive/tmp/crm_invest_one
 hive_table = crm_v2.crm_invest_one_status
 
 [sqoop_params_activity_contact_awards]
-host = jdbc:mysql://10.10.201.153:3306/sugarcrm
+host = jdbc:mysql://10.10.201.153:3306/crm_activity
 username = hadoop
 password = RBZIQfGqNQ0U
 table_name = activity_contact_awards
