--- a/work/fenghuang_jr/personas/version_1/personas.conf
+++ b/work/fenghuang_jr/personas/version_1/personas.conf
@@ -3,3 +3,9 @@ user_invest_var_train_sql_path = ../query_sql/invest_var/invest_var_train.sql
 user_invest_var_hive_path = /data/ml/tongyang/test/data/user_invest_var
 user_invest_var_train_path = /data/ml/tongyang/test/train_set/user_invest_var_train/train.txt
 input_invest_var_result_sql_path = ../query_sql/invest_var/input_invest_var_result.sql
+input_invest_var_result_data_path = /data/ml/tongyang/test/model_data/invest_var/result.txt
+
+[path_user_relation_invest]
+user_relation_invest_train_sql_path = ../query_sql/user_relation_invest/user_relation_invest_train.sql
+user_relation_invest_hive_path = /data/ml/tongyang/test/data/user_relation_invest
+user_relation_invest_train_path = /data/ml/tongyang/test/train_set/user_relation_invest_train/train.txt
