--- a/work/fenghuang_jr/personas/version_1/personas.conf
+++ b/work/fenghuang_jr/personas/version_1/personas.conf
@@ -20,3 +20,10 @@ user_age_hive_path = /data/ml/tongyang/test/data/user_age
 user_age_train_path = /data/ml/tongyang/test/train_set/user_age/train.txt
 input_user_age_result_data_path = /data/ml/tongyang/test/model_data/user_age/result.txt
 input_user_age_result_sql_path = ../query_sql/user_age/input_user_age_result.sql
+
+[path_next_invest_bid]
+next_invest_ratio_train_sql_path = ../query_sql/next_invest_bid/invest_ratio.sql
+next_invest_ratio_hive_path = /data/ml/tongyang/test/data/next_invest_bid
+next_invest_ratio_train_path = /data/ml/tongyang/test/train_set/next_invest_bid/train.txt
+next_invest_ratio_result_data_path = /data/ml/tongyang/test/model_data/next_invest_bid/result.txt
+next_invest_ratio_result_sql_path = ../query_sql/next_invest_bid/input_user_next_invest_bid_result.sql
