--- a/work/fenghuang_jr/personas/version_1/personas.conf
+++ b/work/fenghuang_jr/personas/version_1/personas.conf
@@ -13,6 +13,12 @@ user_relation_invest_train_path = /data/ml/tongyang/test/train_set/user_relation
 input_user_relation_invest_result_data_path = /data/ml/tongyang/test/model_data/user_relation_invest/result.txt
 input_user_relation_invest_result_sql_path = ../query_sql/user_relation_invest/input_user_relation_invest_result.sql
 
+[path_user_relation_invest_view]
+user_relation_invest_view_train_sql_path = ../query_sql/user_relation_invest/user_relation_invest_view_train.sql
+user_relation_invest_view_hive_path = /data/ml/tongyang/test/data/user_relation_invest_view
+user_relation_invest_view_train_path = /data/ml/tongyang/test/train_set/user_relation_invest_view_train/train.txt
+input_user_relation_invest_view_result_data_path = /data/ml/tongyang/test/model_data/user_relation_invest_view/result.txt
+input_user_relation_invest_view_result_sql_path = ../query_sql/user_relation_invest_view/input_user_relation_invest_view_result.sql
 
 [path_user_age]
 user_age_train_sql_path = ../query_sql/user_age/user_age.sql
@@ -27,3 +33,7 @@ next_invest_ratio_hive_path = /data/ml/tongyang/test/data/next_invest_bid
 next_invest_ratio_train_path = /data/ml/tongyang/test/train_set/next_invest_bid/train.txt
 next_invest_ratio_result_data_path = /data/ml/tongyang/test/model_data/next_invest_bid/result.txt
 next_invest_ratio_result_sql_path = ../query_sql/next_invest_bid/input_user_next_invest_bid_result.sql
+next_invest_deadline_result_data_path = /data/ml/tongyang/test/model_data/next_invest_bid_deadline/result.txt
+next_invest_deadline_result_sql_path = ../query_sql/next_invest_bid/input_user_next_invest_deadline_bid_result.sql
+
+
